# CMMR_for_ACPP

./: README.md  convertedToRoS1
conversion_pkg/: CMakeLists.txt  package.xml
conversion_pkg/launch/: connection.launch
conversion_pkg/src/: tf_listener.cpp  traductor.cpp
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/msg/: DecawaveList.msg  DecawavePosition.msg
drones/tello_description/: CMakeLists.txt
drones/tello_driver/: CMakeLists.txt
drones/tello_driver/launch/: emulator_launch.py  teleop_launch.py
drones/tello_driver/src/: tello_driver_node.cpp  tello_joy_node.cpp
drones/tello_gazebo/: CMakeLists.txt
drones/tello_gazebo/launch/: multiple_drones.py
drones/tello_gazebo/models/obstacle/: model.sdf
drones/tello_gazebo/models/walls/: model.sdf
drones/tello_gazebo/worlds/: simple.world  world_lab.world  world_lab_obstacle_v2.world
gazebo_ros2_control/src/: gazebo_ros2_control_plugin.cpp
move_robots/: package.xml  setup.cfg  setup.py
move_robots/launch/: move.launch.py
move_robots/move_robots/: line.py  robot_follower.py  velControlledDrone.py  velControlledRobot.py
real_hardware/: package.xml  setup.cfg  setup.py
real_hardware/config/: ekf.yaml
real_hardware/launch/: complementary.launch.py  rover_control.launch.py  sim_control.launch.py  tello_control.launch.py  total_control.launch.py
real_hardware/real_hardware/: PID.py  decawave.py  demo.py  leo_control.py  simulation.py  system_control_leo.py  system_control_tello.py
real_hardware/rviz/: config1.rviz
rovers/leo_description/urdf/: leo_sim1.urdf.xacro  leo_sim2.urdf.xacro  macros_1.xacro  macros_2.xacro
rovers/leo_teleop/launch/: key_teleop.launch.xml
solo_files/wavefront/: map_order_rover.csv  map_order_tello.csv  wavefront_mod.py
spawner_robots/: CMakeLists.txt  package.xml
spawner_robots/config/: control_rovers.yaml
spawner_robots/launch/: sim.launch.py  spawn_robot.launch.py  spawn_robot_2.launch.py  spawn_robot_unique.launch.py
spawner_robots/rviz/: rviz.rviz
spawner_robots/src/: localization_node.cpp  random_publisher.cpp  robot_description_publisher.cpp  takeoff_node.cpp
spawner_robots/srv/: Command.srv
