<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>move_robots</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lluis.prior.sancho@gmail.com">Lluis Prior</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>std_srvs_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>spawner_robots</exec_depend>
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
