<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spawner_robots</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lluis.prior.sancho@gmail.com">Lluis Prior Sancho</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rclcpp-components</build_depend>
  <build_depend>tello-description</build_depend>
  <build_depend>tello-msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tello_gazebo</build_depend>
  <build_depend>tello_driver</build_depend>
  <build_depend>ros2_shared</build_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <launch_ros export="launch" />
    <ros2_package_share directory="share/spawner_robots"/>
  </export>
</package>
